<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Management System</string>
    <string name="action_settings">Settings</string>
    <string name="sync_from_server">Sync from Server</string>
    <string name="sync_to_server">Sync to Server</string>
    <string name="add_filter">Add Filter</string>
    <string name="categories_spinner_label">Categories</string>
    <string name="stores_spinner_label">Stores</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="search_label">Search</string>
    <string name="storeImageContentDescriptor">Store Image</string>
    <string name="splashScreenImageContentDescriptor">splash loading image</string>
    <string name="itemImageContentDescriptor">Item Image</string>
    <string name="syncConfirmationDialogText">Are You Sure</string>
    <string name="itemPriceTextView">Price</string>
    <string name="itemSizeTextView">Avg Package Size</string>
    <string name="itemPricePerUnitTextView">Price per Unit</string>   
    <string name="itemUnitTextView">Measurment Unit</string>
    <string name="itemUpdateBtnText">Update</string>
    <string name="companyName">www.shaprcart.com</string>
    <string name="store_picker_btn_text">Choose</string>
    <string name="costcoRadioText">Costco</string>
    <string name="hebRadioText">H.E.B</string>
    <string name="samsClubRadioText">Sams Club</string>
    <string name="sproutsRadioText">Sprouts</string>
    <string name="walmartRadioText">Walmart</string>

</resources>